Fixed the issue with the navbar styling on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -144,14 +144,13 @@ a {
     background: black !important; }
     @media (max-width: 991.98px) {
       .site-navbar.bg-light {
-        background: #fff !important;
+        background: #2e2d2d !important;
+        color:white !important;
         top: 0; }
         .site-navbar.bg-light .navbar-brand {
           display: inline-block;
           font-size: 18px;
-          border: 2px solid #000;
-          padding: 2px 10px !important;
-          color: #000; } }
+          padding: 2px 10px !important; } }
   .site-navbar .navbar-nav > li > a {
     color: #fff !important;
     font-size: 14px;
@@ -160,9 +159,11 @@ a {
     position: relative;
     text-transform: uppercase;
     letter-spacing: .2em; }
+    /* For mobile view */
     @media (max-width: 991.98px) {
       .site-navbar .navbar-nav > li > a {
-        color: rgba(0, 0, 0, 0.7) !important; } }
+        background-color:  #2e2d2d !important;
+        color: white !important; } }
   .site-navbar .navbar-nav.active > a {
     color: #bac964 !important; }
   .site-navbar.scrolled {
@@ -201,6 +202,7 @@ a {
     .site-navbar.scrolled .navbar-brand {
       color: #000; }
     .site-navbar.scrolled .dropdown > a:before {
+      background-color: black;
       color: rgba(0, 0, 0, 0.4); }
     .site-navbar.scrolled .navbar-nav > li > a {
       color: rgba(0, 0, 0, 0.7) !important; }
